syntax = "proto3";

package openhdc.connector.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/openhdc/openhdc/api/connector/v1;pb";

service Connector {
  rpc Close(CloseRequest) returns (google.protobuf.Empty);
  rpc Pull(PullRequest) returns (stream PullResponse);
  rpc Push(stream PushRequest) returns (PushResponse);
}

message CloseRequest {}

message PullRequest {
  string namespace = 1;
  repeated string tables = 2;
  repeated string skip_tables = 3;
}

message PullResponse {
  bytes record = 1;
}

message PushRequest {
  bytes record = 1;
}

message PushResponse {}
